tests/reference/asr-subroutine2-2e9b84b.stderr
semantic error: Unexpected use of subroutine name 'bpe'
 --> tests/errors/subroutine2.f90:3:9
  |
3 |     i = bpe()
  |         ^^^^^ 
